--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 	},
 	"dependencies": {
 		"express": "^4.12.4",
-		"body-parser": "^1.15.2"
+		"body-parser": "^1.15.2",
+    "mongoose": "^5.4.11",
+    "mongodb": "^3.1.13"
 	},
 	"engines": {
 		"node": "4.4.5"
